<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projects.aaronmonteabaro.unity3dquiz.MainActivity"
    android:background="@color/colorBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainHeader"
            />

        <Button
            style="@style/mainButtonDesign"
            android:text="@string/quizButton1"
            android:tag="Unity3D Basics"
            />

        <Button
            style="@style/mainButtonDesign"
            android:text="@string/quizButton2"
            android:tag="Unity3D Intermediate"
            />

        <Button
            style="@style/mainButtonDesign"
            android:text="@string/quizButton3"
            android:tag="Unity3D 2D Basics"
            />

        <Button
            style="@style/mainButtonDesign"
            android:text="@string/quizButton4"
            android:tag="Unity3D 2D Intermediate"
            />

    </LinearLayout>

</ScrollView>
